# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: full-check.yml  sonar.yml
gendiff/: __init__.py  formatter.py  gendiff.py  parser.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/test_data/: file3.json  file3.yml  result3.txt  result6.txt  result7.txt
