[project]
authors = [
    {name = "Vladislav", email = "qualcommes100@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.1",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
